<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_stock"
    tools:context=".activities.MainActivity">


    <EditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Insert_Number"
        android:inputType="numberDecimal"
        android:padding="26dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_number"
        android:layout_margin="30dp"
        android:background="@color/lightGreen"
        android:padding="12dp"
        android:text="@string/Start"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/stock_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_arrow_down"
        />

    <TextView
        android:id="@+id/lastTrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stock_imageview"
        android:padding="10dp"
        android:text="@string/last_trade_price"

        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/pcl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastTrade"
        android:padding="10dp"
        android:text="@string/percent_change"

        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/htp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcl"
        android:padding="10dp"
        android:text="@string/highest_trade_price"

        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/ltp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/htp"
        android:padding="10dp"
        android:text="@string/lowest_trade_price"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
</RelativeLayout>